<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s_Ract4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.4"
    tools:context=".s_act_4">

    <ImageView
        android:id="@+id/s_bg3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/s_bg3" />

    <Button
        android:id="@+id/back2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorblack"
        android:layout_alignBottom="@id/act4_scroll"
        android:text="@string/back"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/act4_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/s_act4_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act4_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/act4_text1"
                android:textColor="@color/colorblack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s_day1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text2"
                android:layout_width="wrap_content"
                android:textColor="@color/colorblack"
                android:layout_height="wrap_content"
                android:text="@string/day1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/day2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/day3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day4"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/day4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day5"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/day5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day6"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text7"
                android:layout_width="wrap_content"
                android:textColor="@color/colorblack"
                android:layout_height="wrap_content"
                android:text="@string/day6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/s_day7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/s_day7"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act4_text8"
                android:layout_width="wrap_content"
                android:textColor="@color/colorblack"
                android:layout_height="wrap_content"
                android:text="@string/day7"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>