<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s_Ract5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.4"
    tools:context=".s_act_5">

    <ScrollView
        android:id="@+id/act5_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/s_act5_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/act5_t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/act5_t1"
                android:textColor="@color/colorblack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act5_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t2"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t3"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t4"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t5"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t6"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t7"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t8"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t9"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t10"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t11"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t12"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t13"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t14"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t15"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t16"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t17"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t18"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:paddingTop="20dp"
                android:text="@string/act5_t19"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/act5_t20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/act5_t20"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>